# foodscraps

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  explorer.ipynb  google-api.py  googleapi.py  llm-example.py  mini-box.json  pyproject.toml  quadtree.py  restaurants-carlsbergbyen.json
docs/: gantt-chart.xlsx
src/: app.py  config.py  data_cleaner.py  data_collector.py  explorer.ipynb  googleapi.py  logger.py  plots.ipynb  processing.py  quadtree.py  streamlit_app.py
wiki/: Home.md
