[project]
name = "foodscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "google-auth>=2.48.0",
    "google-maps-areainsights>=0.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "node>=2.0.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "timer-for-python>=0.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F403", "F405"]
